RESOLVED FIXED274751
Faulty assert in RenderTreeBuilder::Ruby::findOrCreateParentForStyleBasedRubyChild
https://bugs.webkit.org/show_bug.cgi?id=274751
Summary Faulty assert in RenderTreeBuilder::Ruby::findOrCreateParentForStyleBasedRuby...
Antti Koivisto
Reported 2024-05-27 05:06:55 PDT
fix assert
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-27 05:07:13 PDT
Antti Koivisto
Comment 2 2024-05-27 05:21:15 PDT
EWS
Comment 3 2024-05-27 08:03:32 PDT
Committed 279351@main (935af36335b8): <https://commits.webkit.org/279351@main> Reviewed commits have been landed. Closing PR #29148 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.