Faulty assert in RenderTreeBuilder::Ruby::findOrCreateParentForStyleBasedRubyChild https://bugs.webkit.org/show_bug.cgi?id=274751 rdar://128789974

Reviewed by Alan Baradlay.

<ruby blockified><ruby> hits asssert.

* LayoutTests/fast/ruby/ruby-block-anonymous-assert-expected.txt: Added.
* LayoutTests/fast/ruby/ruby-block-anonymous-assert.html: Added.
* Source/WebCore/rendering/updating/RenderTreeBuilderRuby.cpp:
(WebCore::RenderTreeBuilder::Ruby::findOrCreateParentForStyleBasedRubyChild):

Fix the assert. Ruby-block may have a non-anonymous <ruby> child.

Canonical link: https://commits.webkit.org/279351@main